Fix up people positioning on mobile styles.

--- a/views/stylesheets/_application.scss
+++ b/views/stylesheets/_application.scss
@@ -882,17 +882,14 @@ header{
   }
 
   .employees {
-    .row:nth-child(3) {
-      margin-bottom: 0;
+    li:nth-child(even) .person {
+      margin-right: 0;
     }
     .person {
         width: 47.5%;
-        margin-left: 5%;
         float: left;
+        margin-right: 17px;
         margin-bottom: $baseline;
-        &:nth-child(odd) {
-          margin-left: 0;
-        }
       p{
         margin-bottom: -5px;
       }
